<resources>
    <string name="app_name">WeatherForcast</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="alerts">Alerts</string>
    <string name="sharedPrefs" translatable="false">sharedPrefs</string>
    <string name="lat" translatable="false">lat</string>
    <string name="lon" translatable="false">lon</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="pressure">Pressure</string>
    <string name="cloud">Cloud</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="ultraViolet">UltraViolet</string>
    <string name="visibility">Visibility</string>
    <string name="chooseLocationSetting">Choose Location Setting</string>
    <string name="languageSetting">languageSetting</string>
    <string name="unitsSetting">unitsSetting</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="save">save</string>
    <string name="chooseMethod">Please Choose a Method</string>
    <string name="done">Done</string>
    <string name="pleaseCheckConnection">Please Check your Connection</string>
    <string name="areYouSure">Are you sure you want to delete this item?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="deletedSuccessfully">Deleted Successfully</string>
    <string name="chooseLocationMethod">Choose Location Method:</string>
    <string name="chooseLanguage">Choose Language:</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">kelvin</string>
    <string name="addAlert">Add Alert</string>
    <string name="alertDuration">Alert Duration</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="alertTime">Alert Time</string>
    <string name="time">Time</string>
    <string name="alertType">Alert Type</string>
    <string name="Notification">Notification</string>
    <string name="Alarm">Alarm</string>
    <string name="add">Add</string>
    <string name="overlay_title">Permission Required</string>
    <string name="overlay_message" translatable="false">Please Allow Overlay Permission</string>
    <string name="overlay_postive_button">Ok</string>
    <string name="overlay_negative_button">Cancel</string>
    <string name="fillRequired">Please Fill Required Fields</string>
    <string name="dismiss">Dismiss</string>


</resources>