<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".settings.view.SettingsFragment"
    android:background="@drawable/my_home_gradient">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <TextView
            android:id="@+id/tvSettingToolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="34sp"
            tools:layout_editor_absoluteX="16dp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tvLocationMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/chooseLocationMethod"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarSettings" />

    <RadioGroup
        android:id="@+id/radioGroupLocationMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvLocationMethod"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioBtnSettingGPS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:checked="false"
            android:text="@string/gps"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioBtnSettingMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:layout_marginStart="24dp"
            android:text="@string/map"
            android:textColor="@color/white" />
    </RadioGroup>


    <TextView
        android:id="@+id/tvLanguageSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/chooseLanguage"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupLocationMethod" />

    <RadioGroup
        android:id="@+id/radioGroupLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvLanguageSetting"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioBtnSettingEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:checked="true"
            android:text="@string/english"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioBtnSettingArabic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:buttonTint="@color/white"
            android:text="@string/arabic"
            android:textColor="@color/white" />
    </RadioGroup>



    <TextView
        android:id="@+id/tvUnitsSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/chooseLanguage"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupLanguage" />

    <RadioGroup
        android:id="@+id/radioGroupUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvUnitsSetting"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioBtnSettingCelsius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:checked="true"
            android:text="@string/celsius"
            android:textColor="@color/white"
            />

        <RadioButton
            android:id="@+id/radioBtnSettingFahrenheit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:buttonTint="@color/white"
            android:text="@string/fahrenheit"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioBtnSettingKelvin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:buttonTint="@color/white"
            android:text="@string/kelvin"
            android:textColor="@color/white" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>