<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="15dp"
        android:elevation="15dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/my_home_gradient">

            <TextView
                android:id="@+id/dialogTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/chooseLocationSetting"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/radioGroupLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/dialogTitle"
                    android:layout_marginTop="16dp">

                    <RadioButton
                        android:id="@+id/radioBtnGPS"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/gps"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/radioBtnMap"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/map"
                        android:textColor="@color/white" />
                </RadioGroup>

            <Button
                android:id="@+id/btnSaveLocationSetting"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/white"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="#F44336"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupLocation"
                app:strokeWidth="1dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
