<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:padding="16dp"
    android:id="@+id/constlayoutParent"
    app:layout_constraintTop_toTopOf="parent"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="15dp"
        android:elevation="15dp"
        app:layout_constraintTop_toTopOf="@id/constlayoutParent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/btnCloseAddAlert"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/ic_baseline_close_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvAddAlertTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/addAlert"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintTop_toBottomOf="@id/tvAddAlertTitle"
                android:id="@+id/alertDurationConstLayout"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvAlertDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:paddingLeft="16dp"
                    android:text="@string/alertDuration"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etAlertFromDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:elevation="8dp"
                    app:boxBackgroundColor="#FFF"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toStartOf="@id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvAlertDuration">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="true"
                        android:focusable="false"
                        android:hint="@string/from"
                        android:inputType="text"
                        android:textColor="@color/black"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etAlertToDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:elevation="8dp"
                    app:boxBackgroundColor="#FFF"
                    app:boxStrokeColor="#FFF"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/tvAlertDuration">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="true"
                        android:focusable="false"
                        android:hint="@string/to"
                        android:inputType="text"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>
                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintTop_toBottomOf="@id/alertDurationConstLayout"
                android:id="@+id/alarmTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvAlertTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:paddingLeft="16dp"
                    android:text="@string/alertTime"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etAlertTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:elevation="8dp"
                    app:boxBackgroundColor="#FFF"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvAlertTime">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="true"
                        android:focusable="false"
                        android:hint="@string/time"
                        android:inputType="text"
                        android:textColor="@color/black"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/radioGroupConstLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/alarmTime"
                android:layout_marginTop="8dp"

                android:padding="8dp">


                <TextView
                    android:id="@+id/alarmSoundTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:paddingLeft="16dp"
                    android:text="@string/alertType"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/radioGroupAlertType"
                    android:weightSum="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/alarmSoundTxt"
                    >

                    <RadioButton
                        android:id="@+id/btnTypeNotification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="1"
                        android:text="@string/Notification"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/btnTypeAlarm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Alarm"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </RadioGroup>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioGroupConstLayout">

                <Button
                    android:id="@+id/btnSaveAlert"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:background="@color/Light_Orange"
                    app:cornerRadius="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:strokeWidth="1dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>